# TTK4145_gruppe_41

./: .gitignore  README.md
Exercise1/3 - shared variable/c/: foo.c
Exercise1/3 - shared variable/go/: foo.go
Exercise1/5 - bounded buffer/c/: Makefile  main.c
Exercise1/5 - bounded buffer/go/: main.go
Exercise2/: CMakeLists.txt
Exercise2/common/: CMakeLists.txt
Exercise2/common/include/log_helper/: log_helper.h
Exercise2/tcp_receiver/: CMakeLists.txt
Exercise2/tcp_receiver/src/: tcp_receiver.c
Exercise2/udp_receiver/: CMakeLists.txt
Exercise2/udp_receiver/src/: udp_receiver.c
Exercise2/udp_sender/: CMakeLists.txt
Exercise2/udp_sender/src/: udp_sender.c
Exercise2/udp_tcp_sender/: CMakeLists.txt
Exercise2/udp_tcp_sender/src/: udp_tcp_sender.c
rtsystem/: CMakeLists.txt  README.md
rtsystem/include/rtsystem/: append_log_helper.h  async_log_helper.h  log_helper.h
rtsystem/include/rtsystem/core/: cmd_parser.h  fifo_queue.h  task.h  task_helper.h
rtsystem/include/rtsystem/tasks/: dispatcher_task.h  example_worker_task.h  log_task.h  stdin_task.h
rtsystem/src/core/: CMakeLists.txt  cmd_parser.c  fifo_queue.c  task.c  task_helper.c
rtsystem/src/main/: CMakeLists.txt  main.c
rtsystem/src/tasks/: CMakeLists.txt  dispatcher_task.c  example_worker_task.c  log_task.c  stdin_task.c
